--- a/noForWhile.html
+++ b/noForWhile.html
@@ -22,10 +22,13 @@
 </style>
 
 <body>
-  <div class="box hide"></div>
-  <div class="box hide"></div>
-  <div class="box hide"></div>
-  <div class="box hide"></div>
+  <h1>heello</h1>
+  <div class="box hide">1</div>
+  <div class="box hide">2</div>
+  <div class="box hide">3</div>
+  <div class="box hide">4</div>
+
+  <input id="prodId" name="prodId" type="hidden" value="xm234fdfdfdjq">
 
 </body>
 <script>
